# Pizzeria

./: Bufala.cpp  Bufala.h  CMakeLists.txt  Client.cpp  Client.h  Communicate.cpp  Communicate.h  Date.cpp  Date.h  FrameProgetto.cpp  FrameProgetto.h  Funghi_Porcini.cpp  Funghi_Porcini.h  Ingredient.cpp  Ingredient.h  IngredientsFactory.cpp  IngredientsFactory.h  MainFrame.cpp  MainFrame.h  Margherita.cpp  Margherita.h  Marinara.cpp  Marinara.h  Napoli.cpp  Napoli.h  Olio_Tartufato.cpp  Olio_Tartufato.h  Order.cpp  Order.h  Panels.cpp  Panels.h  Pizza.cpp  Pizza.h  PizzaFactory.cpp  PizzaFactory.h  RegistrationOrder.cpp  main.cpp  main.h
test/: CMakeLists.txt  PizzaTest.cpp  runAllTests.cpp
